# Depthflow-WebGL

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  index.html  pyproject.toml
src/css/: style.css
src/depthflow_webgl/: server.py
src/js/: depth.js  input.js  main.js  motion.js  recorder.js  renderer.js  state.js  ui.js
src/shaders/: fragment.glsl  vertex.glsl
two-layer-depth-demo/: .gitignore  IMPLEMENTATION_PLAN.md  index.html  stretch-fixes.md
two-layer-depth-demo/src/js/: depth-estimator.js  depth-processor.js  inpainter.js  main.js  renderer.js  state.js  ui.js
two-layer-depth-demo/src/shaders/: fragment.glsl  vertex.glsl
