[project]
name = "depthflow-webgl"
version = "0.1.0"
description = "WebGL-based parallax depth effect renderer"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
depthflow-webgl = "depthflow_webgl.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/depthflow_webgl"]
